After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 738197 - g_cond_timed_wait() doesn't time out on Mac OS X
g_cond_timed_wait() doesn't time out on Mac OS X
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: gthread
2.42.x
Other Mac OS
: Normal normal
: ---
Assigned To: gtkdev
gtkdev
Depends on:
Blocks:
 
 
Reported: 2014-10-09 04:34 UTC by Benjamin Gilbert
Modified: 2014-10-10 10:42 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Reproducer (580 bytes, text/plain)
2014-10-09 04:34 UTC, Benjamin Gilbert
  Details
Patch (1.26 KB, patch)
2014-10-09 04:39 UTC, Benjamin Gilbert
committed Details | Review

Description Benjamin Gilbert 2014-10-09 04:34:35 UTC
Created attachment 288088 [details]
Reproducer

On Mac OS X, g_cond_timed_wait() does not properly time out when abs_time is reached.  It is passing an end_time to g_cond_wait_until() in real time rather than monotonic time, which is no longer correct on any platform.  Reproducer and patch attached.
Comment 1 Benjamin Gilbert 2014-10-09 04:39:41 UTC
Created attachment 288089 [details] [review]
Patch
Comment 2 Allison Karlitskaya (desrt) 2014-10-09 13:45:33 UTC
Review of attachment 288089 [details] [review]:

Good catch!  Seems that I forgot to check the deprecated APIs when doing this cleanup.

Please commit.